// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches previous snapshot:  1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#C4C4C4",
        "borderRadius": 100,
        "justifyContent": "center",
        "overflow": "hidden",
      },
      {
        "height": 72,
        "width": 72,
      },
      undefined,
    ]
  }
>
  <Image
    source={
      {
        "uri": "",
      }
    }
    style={
      {
        "height": 54,
        "width": 54,
      }
    }
  />
</View>
`;

exports[`Matches previous snapshot:  2`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#C4C4C4",
        "borderRadius": 100,
        "justifyContent": "center",
        "overflow": "hidden",
      },
      {
        "height": 48,
        "width": 48,
      },
      undefined,
    ]
  }
>
  <Image
    source={
      {
        "uri": "",
      }
    }
    style={
      {
        "height": 36,
        "width": 36,
      }
    }
  />
</View>
`;
